# RoRServerBot

./: .gitignore  README.md  config.example.yml  config.py  pyproject.toml  rorbot.py  test.py
RoRnet/: __init__.py  constants.py  structs.py
client/: __init__.py  client.py  connection.py
database/: manager.py
extensions/: servers.py
rorserverbot/: __init__.py  bot.py  client.py  config.py  const.py  datamanager.py  logger.py  models.py  util.py
rorserverbot/RoRnet/: __init__.py  constants.py  structs.py  utils.py
rorserverbot/client/: client.py  stream.py
rorserverbot/extensions/: servers.py
util/: __init__.py  embed.py
